@@ -1,0 +1,2 @@
+Warning: &use: could not locate jar file '/Users/raffi/jdbc.jar' at line 0
+Warning: java.lang.ClassNotFoundException: ABCDE at line 0
